modificando botonera de redes sociales en el footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -121,35 +121,41 @@
                 <%= yield %>
             </div>
         </body>
-        <footer class="w3-container w3-padding-16 w3-opacity w3-light-grey w3-centered w3-bottom">
+        <footer class="w3-container w3-padding-16 w3-light-grey w3-centered w3-bottom">
             <table class="w3-table-all w3-centered">
+                <p class="w3-medium">Creado por Buena Cosecha - 2016</p>
+
                 <h5>
                     CONTACTO
                 </h5>
                 <tr>
-                <th><a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
-                        <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
-                    </a>
-                </th>
-                <th><a href="https://www.instagram.com/buenacosechaska" target="_blank">
-                        <i id="social-in" class="fa fa-instagram fa-2x social"></i>
-                    </a>
-                </th>
-                <th><a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
-                        <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
-                    </a>
-                </th>
-                <th><a href="https://www.twitter.com/buenacosechaska" target="_blank">
-                        <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
-                    </a>
-                </th>
-                <th><a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                        <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
-                    </a>
-                </th>
-            </tr>
-            <p class="w3-medium">Creado por Buena Cosecha - 2016</p>
-        </div>
+                    <th>
+                        <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                            <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                            <i id="social-in" class="fa fa-instagram fa-2x social"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
+                            <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                            <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                            <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
+                        </a>
+                    </th>
+                </tr>
+            </div>
 
-    </footer>
-</html>
+        </footer>
+    </html>
