--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -14,13 +14,15 @@
         <br>
 
         <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fperdida.en.tu.mirada%2Fvideos%2F10209921294446495%2F&width=500"
-            width="1000"
-            height="1000"
-            style="border:none;overflow:hidden"
+            onload="javascript:this.style.height = this.contentWindow.document.body.scrollHeight + 'px';"
             scrolling="no"
+            height="600"
+            marginheight="0"
             frameborder="0"
-            allowTransparency="true"></iframe>
+            width="480"
+            src="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing">
+        </iframe>
+
 
     </body>
 </html>
