--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -13,15 +13,7 @@
         <br>
         <br>
 
-        <iframe
-            onload="javascript:this.style.height = this.contentWindow.document.body.scrollHeight + 'px';"
-            scrolling="no"
-            height="600"
-            marginheight="0"
-            frameborder="0"
-            width="480"
-            src="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing">
-        </iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" frameborder="0" allowfullscreen></iframe><br/>
 
 
     </body>
