agregando el canal de youtube a la pagina videos

--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -13,7 +13,7 @@
         <br>
         <br>
 
-        <iframe width="100%" height="400" src="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" frameborder="0" allowfullscreen></iframe><br/>
+        <iframe src="http://www.youtube.com/embed/xzvScRnF6MU?autoplay=1" autoplay=1 width="960" height="447" frameborder="0" allowfullscreen></iframe>
 
 
     </body>
