--- a/views/index.erb
+++ b/views/index.erb
@@ -38,91 +38,61 @@
             <div class="mySlides w3-display-container  w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>en vivo!</b>
-                    </p>
+                    <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>en vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!!</h3>
-                    <p>
-                        <b>En vivo!!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda20.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!!</h3>
-                    <p>
-                        <b>En vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>en vivo!</b>
-                    </p>
+                  <h2><b>Buena Cosecha!</b></h2>
                 </div>
             </div>
 
