agregando texto a las imagenes del slide

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -55,6 +55,8 @@
                 </div>
             </li> -->
             <li class="w3-hide-small w3-right">
+              Seguinos, contactanos, miranos
+            <li class="w3-hide-small w3-right">
                 <a href="javascript:void(0)">
                     <i id="social-se" class="fa fa-search fa-3x social"></i>
                 </a>
