agregando texto al menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -55,8 +55,6 @@
                 </div>
             </li> -->
             <li class="w3-hide-small w3-right">
-              Seguinos, contactanos, miranos
-            <li class="w3-hide-small w3-right">
                 <a href="javascript:void(0)">
                     <i id="social-se" class="fa fa-search fa-3x social"></i>
                 </a>
@@ -86,6 +84,9 @@
                     <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
                 </a>
             </li>
+            <li class="w3-hide-small w3-right">
+              <i>Seguinos, contactanos, miranos</i>
+
         </ul>
     </div>
 
