--- a/views/fechas/locabohemia.erb
+++ b/views/fechas/locabohemia.erb
@@ -10,90 +10,95 @@
         <br>
         <br>
         <br>
-        <div class="w3-row-padding w3-margin-top">
-
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band1.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band7.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band2.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
+        <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
+            <div class="w3-col s2">
+                <img src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
             </div>
         </div>
-
-        <div class="w3-row-padding w3-margin-top">
-
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band3.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band5.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band6.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-container ">
-            <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
-                <h5></h5>
-                <i class="icon-facebook-sign icon-3x"></i>
-            </a>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-container ">
-            <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
-                <h5></h5>
-                <i class="icon-facebook-sign icon-3x"></i>
-            </a>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+        </div>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
 
-    </body>
-</html>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+        </div>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+        </div>
+        <div class="w3-col s2">
+            <img src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+        </div>
+        <div id="myModal" class="w3-modal w3-black">
+            <span class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright cursor" onclick="closeModal()">&times;</span>
+            <div class="w3-modal-content">
+
+                <div class="w3-content" style="max-width:1200px">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%">
+                    <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%">
+
+                    <div class="w3-row w3-black w3-center">
+                        <div class="w3-container w3-display-container">
+                            <p id="caption"></p>
+                            <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:2%" onclick="plusDivs(-1)">&#10094;</span>
+                            <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                        <div class="w3-col s2">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w3-container">
+                    <div>
+                        <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
+                            <h5></h5>
+                            <i class="icon-facebook-sign icon-3x"></i>
+                        </a>
+                    </div>
+                    <div>
+                        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
+                            <h5></h5>
+                            <i class="icon-facebook-sign icon-3x"></i>
+                        </a>
+                    </div>
+                </div>
+                <script src="/js/imagegalery.js"></script>
+
+            </body>
+        </html>
