--- a/views/fechas/locabohemia.erb
+++ b/views/fechas/locabohemia.erb
@@ -11,30 +11,30 @@
         <br>
         <br>
         <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
-            <div class="w3-col s4">
+            <div class="w3-col s3">
                 <img src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
             </div>
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
 
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
-        <div class="w3-col s4">
+        <div class="w3-col s3">
             <img src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
         </div>
         <div id="myModal" class="w3-modal w3-black">
@@ -57,48 +57,50 @@
                             <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:2%" onclick="plusDivs(-1)">&#10094;</span>
                             <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
                         </div>
-                        <div class="w3-col s4">
+                        <div class="w3-col s3">
                             <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
-                        <div class="w3-col s4">
-                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Nature and sunrise">
+                        <div class="w3-col s3">
+                            <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="w3-container">
-                    <div>
-                        <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
-                            <h5></h5>
-                            <i class="icon-facebook-sign icon-3x"></i>
-                        </a>
-                    </div>
-                    <div>
-                        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
-                            <h5></h5>
-                            <i class="icon-facebook-sign icon-3x"></i>
-                        </a>
-                    </div>
-                </div>
-                <script src="/js/imagegalery.js"></script>
+        <div class="w3-container">
+            <div>
+                <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
+                    <h5></h5>
+                    <i class="icon-facebook-sign icon-3x"></i>
+                </a>
+            </div>
+            <div>
+                <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
+                    <h5></h5>
+                    <i class="icon-facebook-sign icon-3x"></i>
+                </a>
+            </div>
+        </div>
+        <script src="/js/imagegalery.js"></script>
 
-            </body>
-        </html>
+    </body>
+</html>
