--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -1,102 +1,110 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-    <title> Cosecha, Ska Reggae | En el Parque Saavedra</title>
-    <style>
-        body {
-            font-family: "Lato", sans-serif;
-        }
-        .mySlides {
-            display: none;
-        }
+    <head>
+        <meta charset="utf-8">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <title>
+            Cosecha, Ska Reggae | En el Parque Saavedra</title>
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
+            .mySlides {
+                display: none;
+            }
 
-    </style>
-  </head>
-  <br>
-  <br>
-  <br>
+        </style>
+    </head>
+    <br>
+    <br>
+    <br>
+    <body>
+        <div class="w3-container">
+            <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
 
-  <body>
-      <div class="w3-row-padding w3-margin-top">
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda8.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+            </div>
 
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda1.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda2.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda3.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda4.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-      </div>
+            <div id="myModal" class="w3-modal w3-black">
+                <span class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright cursor" onclick="closeModal()">&times;</span>
 
-      <div class="w3-row-padding w3-margin-top">
+                <div class="w3-modal-content">
+                    <div class="w3-content" style="max-width:1200px">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda2.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda3.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda4.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda5.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda7.jpg.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda8.jpg" style="width:100%">
 
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda5.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes//galeria/fechas/pquesaavedra1-10/banda7.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
+                        <div class="w3-row w3-black w3-center">
+                            <div class="w3-container w3-display-container">
+                                <p id="caption"></p>
+                                <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:2%" onclick="plusDivs(-1)">&#10094;</span>
+                                <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda8.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-          <div class="w3-quarter w3-display-container">
-              <div class="w3-card-2">
-                  <img src="/imagenes//galeria/fechas/pquesaavedra1-10/banda8.jpg" class="w3-border w3-padding" style="width:100%">
-                  <div class="w3-container">
-                      <h5></h5>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="w3-container ">
-        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos acá!</h5>
-          <i class="icon-facebook-sign icon-3x"></i>
-        </a>
+        <div class="w3-container ">
+            <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142">
+                <h5>Mas fotos acá!</h5>
+                <i class="icon-facebook-sign icon-3x"></i>
+            </a>
+        </div>
 
-      </div>
-
-  </body>
+        <script src="/js/imagegalery.js"></script>
+    </body>
 </html>
