agregando pagina y menu de nosotros

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,12 @@
                     <a href="proximos">Próximos</a>
                     <a href="pasados">Pasados</a>
                 </div>
-
+            </li>
+            <li class="w3-hide-small">
+                <a href="nosotros" class="w3-padding-large" title="Nosotros">
+                    <h4>Nosotros</h4>
+                </a>
+                </div>
             </li>
             <!-- <li class="w3-hide-small w3-dropdown-hover">
                 <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
