agregando pagina y menu de nosotros

--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | Nosotros</title>
+    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+    <title>Buena Cosecha, Ska Reggae | Nosotros </title>
   </head>
   <body>
 
