agregando pagina y menu de nosotros

--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
     <title>Buena Cosecha, Ska Reggae | Nosotros </title>
   </head>
   <body>
 
     <!-- The Band Section -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
+    <div class="w3-container w3-content w3-center w3-padding-64 quitar" style="max-width:800px">
         <h2 class="w3-wide">LA BANDA</h2>
         <p class="w3-opacity">
             <i>Estos somos!!</i>
