agregando icono facebook a las fotos de perfiles

--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -19,7 +19,7 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
-                    <p>Beto</p> <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <p><i class="fa fa-facebook" aria-hidden="true"></i>Beto</p> 
 
                     <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
             </div>
