agregando icono facebook a las fotos de perfiles

--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -19,18 +19,18 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
-                    <p><i class="fa fa-facebook" aria-hidden="true"></i>Beto</p> 
+                    <p>Beto     <i class="fa fa-facebook" aria-hidden="true"></i></p>
 
                     <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
             </div>
             <div class="w3-third">
                 <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank">
-                    <p>Uri</p>
+                    <p>Uri     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
             </div>
             <div class="w3-third">
                 <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank">
-                    <p>Gaston</p>
+                    <p>Gaston     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
             </div>
         </div>
@@ -38,18 +38,18 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank">
-                    <p>Vasco</p>
+                    <p>Vasco     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
             </div>
 
             <div class="w3-third">
                 <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank">
-                    <p>Romi</p>
+                    <p>Romi     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
             </div>
             <div class="w3-third">
                 <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank">
-                    <p>Dani</p>
+                    <p>Dani     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
             </div>
         </div>
@@ -57,17 +57,17 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank">
-                    <p>Herni</p>
+                    <p>Herni     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
             </div>
             <div class="w3-third">
                 <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank">
-                    <p>Meli</p>
+                    <p>Meli     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
             </div>
             <div class="w3-third">
                 <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
-                    <p>Facu</p>
+                    <p>Facu     <i class="fa fa-facebook" aria-hidden="true"></i></p>
                     <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
             </div>
         </div>
