--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -13,11 +13,14 @@
         <br>
         <br>
 
-
-        <iframe src="https://www.youtube.com/embed/cG5_PR79tJM" autoplay=1 width="960" height="447" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/b44lVjxH4gU" autoplay=1 width="960" height="447" frameborder="0" allowfullscreen></iframe>
-
-
-
+        <div class="embed-responsive embed-responsive-16by9" >
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cG5_PR79tJM"></iframe>
+        </div>
+        <div class="embed-responsive embed-responsive-16by9" >
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b44lVjxH4gU"></iframe>
+        </div>
+        <div class="embed-responsive embed-responsive-16by9" >
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_L0ahc4C2jk"></iframe>
+        </div>
     </body>
 </html>
