--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -1,78 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-    <title>Buena Cosecha, Ska Reggae | Nosotros </title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <title>Buena Cosecha, Ska Reggae | Nosotros
+        </title>
+    </head>
+    <body>
 
-    <!-- The Band Section -->
-    <div class="w3-container w3-content w3-center w3-padding-64 quitar" style="max-width:800px">
-        <h2 class="w3-wide">LA BANDA</h2>
-        <p class="w3-opacity">
-            <i>Estos somos!!</i>
-        </p>
-        <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
-        </p>
-        <div class="w3-row w3-padding-32">
-            <div class="w3-third">
-                <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
-                    <p>Beto     <i class="fa fa-facebook" aria-hidden="true"></i></p>
+        <!-- The Band Section -->
+        <div class="w3-container w3-content w3-center w3-padding-64 quitar" style="max-width:800px">
+            <h2 class="w3-wide">LA BANDA</h2>
+            <p class="w3-opacity">
+                <i>Estos somos!!</i>
+            </p>
+            <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
+            </p>
+            <div class="w3-row w3-padding-32">
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
+                        <p>Beto
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
 
-                    <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank">
+                        <p>Uri
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank">
+                        <p>Gaston
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                </div>
             </div>
-            <div class="w3-third">
-                <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank">
-                    <p>Uri     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+
+            <div class="w3-row w3-padding-32">
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank">
+                        <p>Vasco
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                </div>
+
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank">
+                        <p>Romi
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank">
+                        <p>Dani
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                </div>
             </div>
-            <div class="w3-third">
-                <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank">
-                    <p>Gaston     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+
+            <div class="w3-row w3-padding-32">
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank">
+                        <p>Herni
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank">
+                        <p>Meli
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
+                        <p>Facu
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                </div>
             </div>
         </div>
 
-        <div class="w3-row w3-padding-32">
-            <div class="w3-third">
-                <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank">
-                    <p>Vasco     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-            </div>
-
-            <div class="w3-third">
-                <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank">
-                    <p>Romi     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
-            </div>
-            <div class="w3-third">
-                <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank">
-                    <p>Dani     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
-            </div>
-        </div>
-
-        <div class="w3-row w3-padding-32">
-            <div class="w3-third">
-                <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank">
-                    <p>Herni     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-            </div>
-            <div class="w3-third">
-                <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank">
-                    <p>Meli     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-            </div>
-            <div class="w3-third">
-                <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
-                    <p>Facu     <i class="fa fa-facebook" aria-hidden="true"></i></p>
-                    <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-            </div>
-        </div>
-    </div>
-
-
-  </body>
+    </body>
 </html>
