--- a/views/secciones/musica.erb
+++ b/views/secciones/musica.erb
@@ -10,11 +10,12 @@
 
     <body>
 
-      <br>
-      <br>
-      <br>
+        <br>
+        <br>
+        <br>
 
-      <h1> En construcción</h1>
+        <h1>
+            En construcción</h1>
 
     </body>
 </html>
