Agregado de fuente al menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -24,7 +25,7 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover">
+            <li class="w3-hide-small w3-dropdown-hover menufont">
                 <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
                     <h4>Música</h4>
                 </a>
@@ -35,7 +36,7 @@
                 </div>
             </li>
 
-            <li class="w3-hide-small w3-dropdown-hover">
+            <li class="w3-hide-small w3-dropdown-hover menufont">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Musica">
                     <h4>Shows</h4>
                 </a>
@@ -45,7 +46,7 @@
                 </div>
             </li>
             <li class="w3-hide-small">
-                <a href="nosotros" class="w3-padding-large" title="Nosotros">
+                <a href="nosotros" class="w3-padding-large menufont" title="Nosotros">
                     <h4>Nosotros</h4>
                 </a>
             </li>
