--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,11 +25,11 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover menufont">
-                <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
+            <li class="w3-hide-small w3-dropdown-hover ">
+                <a href="multimedia" class="w3-hover-none w3-padding-large menufont"title="Musica">
                     <h4>Música</h4>
                 </a>
-                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
+                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align menufont">
                     <a href="audios">Audios</a>
                     <a href="videos">Videos</a>
                     <a href="letras">Letras</a>
@@ -37,16 +37,16 @@
             </li>
 
             <li class="w3-hide-small w3-dropdown-hover menufont">
-                <a href="shows" class="w3-hover-none w3-padding-large" title="Musica">
+                <a href="shows" class="w3-hover-none w3-padding-large menufont"Title="Shows">
                     <h4>Shows</h4>
                 </a>
-                <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
+                <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align menufont">
                     <a href="proximos">Próximos</a>
                     <a href="pasados">Pasados</a>
                 </div>
             </li>
-            <li class="w3-hide-small">
-                <a href="nosotros" class="w3-padding-large menufont" title="Nosotros">
+            <li class="w3-hide-small menufont">
+                <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4>Nosotros</h4>
                 </a>
             </li>
