agregado fuente lobster para los menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,8 +25,8 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover menufont">
-                <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
+            <li class="w3-hide-small w3-dropdown-hover">
+                <a href="multimedia" class="w3-hover-none w3-padding-large menufont" title="Musica">
                     <h4>Música</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align menufont">
