--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,7 @@
         <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Lobster" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -26,19 +25,19 @@
 
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="multimedia" class="w3-hover-none w3-padding-large menufont" title="Musica">
-                    <h4>Música</h4>
+                <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
+                    <h4 class="menuhome">Música</h4>
                 </a>
-                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align menufont">
+                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="audios">Audios</a>
                     <a href="videos">Videos</a>
                     <a href="letras">Letras</a>
                 </div>
             </li>
 
-            <li class="w3-hide-small w3-dropdown-hover menufont">
+            <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
-                    <h4>Shows</h4>
+                    <h4 class="menuhome">Shows</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align ">
                     <a href="proximos">Próximos</a>
@@ -47,7 +46,7 @@
             </li>
             <li class="w3-hide-small">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
-                    <h4>Nosotros</h4>
+                    <h4 class="menuhome">Nosotros</h4>
                 </a>
             </li>
             <!-- <li class="w3-hide-small w3-dropdown-hover">
