cambiando color al texto del menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover">
+            <li class="w3-hide-small w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
                     <h4 class="menuhome">Música</h4>
                 </a>
