--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2040,7 +2040,20 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     font-family: 'Bangers', cursive;
 }
 
-.menuhome {
-    font-size: 25px;
+.menuhomerojo {
+    font-size: 27px;
     font-family: 'Bangers', cursive;
+    color: #A32535;
+}
+
+.menuhomeamarillo {
+    font-size: 27px;
+    font-family: 'Bangers', cursive;
+    color: #E6D672;
+}
+
+.menuhomeverde {
+    font-size: 27px;
+    font-family: 'Bangers', cursive;
+    color: #43962D;
 }
