cambiando el color a blanco

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,11 +46,11 @@
             </li>
             <li class="w3-hide-small">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
-                    <h4 class="textomenucentro">Nosotros</h4>
+                    <h4 class="menuhomeverde">Nosotros</h4>
                 </a>
             </li>
             <li class="w3-hide-small w3-center">
-                <h2 class="textoslide">
+                <h2 class="textomenucentro">
                     <b>Buena Cosecha!</b>
                 </h2>
             </li>
