cambiando de tabla a lista el footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -130,7 +130,7 @@
                 <%= yield %>
             </div>
         </body>
-        <div class="w3-bottom">
+        <div class="w3-bottom w3-content">
             <ul class="w3-navbar w3-card-2 w3-center footertype">
                 <li>
                     <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
