footer a la derecha

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -130,7 +130,7 @@
                 <%= yield %>
             </div>
         </body>
-        <div class="w3-bottom w3-center">
+        <div class="w3-bottom w3-right">
             <ul class="w3-navbar footertype ">
                 <li>
                     <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
