--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -11,7 +11,7 @@
     <br>
     <br>
 
-    <body>
+    <body class="fondosdepagina">
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
             <a href="audios" class="quitar">
                 <h3>Audios</h3>
