fondo negro a pagina musica

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -11,27 +11,29 @@
     <br>
     <br>
 
-    <body class="fondosdepagina">
-        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <a href="audios" class="quitar">
-                <h3>Audios</h3>
-            </a>
-        </div>
-        <br>
+    <body class="">
+        <div class="fondosdepagina">
+            <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+                <a href="audios" class="quitar">
+                    <h3>Audios</h3>
+                </a>
+            </div>
+            <br>
 
-        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-            <a href="videos" class="quitar">
-                <h3>Videos</h3>
-            </a>
-        </div>
-        <br>
+            <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+                <a href="videos" class="quitar">
+                    <h3>Videos</h3>
+                </a>
+            </div>
+            <br>
 
-        <div class="w3-container w3-leftbar w3-border-dark-grey w3-grey">
-            <a href="letras" class="quitar">
-                <h3>Letras</h3>
-            </a>
+            <div class="w3-container w3-leftbar w3-border-dark-grey w3-grey">
+                <a href="letras" class="quitar">
+                    <h3>Letras</h3>
+                </a>
+            </div>
+            <br>
         </div>
-        <br>
 
     </body>
 </html>
