fuentes a las categorias

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <link href="https://fonts.googleapis.com/css?family=Anton|Permanent+Marker|Shrikhand" rel="stylesheet">
         <title>Buena Cosecha, Ska Reggae | Música</title>
     </head>
 
@@ -14,21 +13,21 @@
 
     <body class="">
         <div class="w3-container w3-leftbar textocategorias">
-            <a href="audios" class="quitar">
+            <a href="audios" class="quitar textocategorias">
                 <h3>Audios</h3>
             </a>
         </div>
         <br>
 
         <div class="w3-container w3-leftbar textocategorias">
-            <a href="videos" class="quitar">
+            <a href="videos" class="quitar textocategorias">
                 <h3>Videos</h3>
             </a>
         </div>
         <br>
 
         <div class="w3-container w3-leftbar textocategorias">
-            <a href="letras" class="quitar">
+            <a href="letras" class="quitar textocategorias">
                 <h3>Letras</h3>
             </a>
         </div>
