fuentes a las categorias

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -11,23 +11,23 @@
     <br>
     <br>
 
-    <body class="textocategorias">
-        <div class="w3-container w3-leftbar">
-            <a href="audios" class="quitar textocategorias">
+    <body class="">
+        <div class="w3-container w3-leftbar textocategorias">
+            <a href="audios" class="quitar ">
                 <h3>Audios</h3>
             </a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar">
-            <a href="videos" class="quitar textocategorias">
+        <div class="w3-container w3-leftbar textocategorias">
+            <a href="videos" class="quitar ">
                 <h3>Videos</h3>
             </a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar">
-            <a href="letras" class="quitar textocategorias">
+        <div class="w3-container w3-leftbar textocategorias">
+            <a href="letras" class="quitar ">
                 <h3>Letras</h3>
             </a>
         </div>
